hp16700: Initial driver skeleton.

--- a/Makefile.am
+++ b/Makefile.am
@@ -336,6 +336,12 @@ src_libdrivers_la_SOURCES += \
 	src/hardware/hantek-dso/protocol.c \
 	src/hardware/hantek-dso/api.c
 endif
+if HW_HP16700
+src_libdrivers_la_SOURCES += \
+	src/hardware/hp16700/protocol.h \
+	src/hardware/hp16700/protocol.c \
+	src/hardware/hp16700/api.c
+endif
 if HW_HP_3457A
 src_libdrivers_la_SOURCES += \
 	src/hardware/hp-3457a/protocol.h \
